# BSL-Laser-Project

./: .gitattributes  .gitignore  AGENT.md  CLAUDE.md  CMakeLists.txt  README.md  flash-firmware.command  start-host-console.command
.agent/: AGENT.md  INDEX.md  SOP.md
.agent/runs/: CLAUDE.md
.agent/runs/_archive/: README.md
.agent/runs/_archive/v2-rewrite-seed/: Implement.md
.agent/runs/powered-ready-console/: ExecPlan.md  Implement.md  Prompt.md  Status.md
.agent/runs/v2-rewrite-seed/: ExecPlan.md  Implement.md  Prompt.md  Status.md
.agent/skills/: EXTERNAL.md  README.md
.agent/skills/Uncodixfy/: SKILL.md
.agent/skills/calibration-provisioning/: SKILL.md
.agent/skills/context-handoff/: SKILL.md
.agent/skills/cross-module-audit/: SKILL.md
.agent/skills/device-flashing/: SKILL.md
.agent/skills/firmware-change/: SKILL.md
.agent/skills/firmware-validation/: SKILL.md
.agent/skills/gpio-config/: SUBMISSION_CHECKLIST.md
.agent/skills/gpio-config/scripts/: generate_config.py  validate_pinmap.py
.agent/skills/gpio-config/tests/: conftest.py  test_cross_platform.py  test_esp32_scenarios.py  test_regression.py  test_rpi_scenarios.py  test_syntax_validation.py
.agent/skills/gui-change/: SKILL.md
.agent/skills/gui-validation/: SKILL.md
.agent/skills/hardware-safety/: SKILL.md
.agent/skills/powered-bench-validation/: SKILL.md
.agent/skills/protocol-evolution/: SKILL.md
.agent/skills/review-loop/: SKILL.md
.agent/skills/session-start/: SKILL.md
.claude/: launch.json  settings.json
.claude-plugin/: plugin.json
.claude/agents/: bsl-bench-validator.md  bsl-consistency-reviewer.md  bsl-docs-guardian.md  bsl-firmware-auditor.md  bsl-firmware-engineer.md  bsl-gpio-auditor.md  bsl-gui-engineer.md  bsl-hardware-safety.md  bsl-interaction-reviewer.md  bsl-orchestrator.md  bsl-protocol-auditor.md  bsl-uncodixfy-reviewer.md
.claude/commands/: audit-firmware.md  audit-gui.md  flash.md  handoff.md  render-check.md  review-loop.md  session-start.md  validate-powered.md
.claude/hooks/: mark-audit-done.py  post-tool-use-track.py  pre-tool-use-firmware.py  pre-tool-use-gui.py  session-start-banner.sh  statusline.sh  stop-validation-check.py  user-prompt-reminder.py
.claude/output-styles/: bsl-safety-critical.md
.github/workflows/: ci-cd.yml
components/laser_controller/: CLAUDE.md  CMakeLists.txt
components/laser_controller/include/: laser_controller_app.h  laser_controller_bench.h  laser_controller_board.h  laser_controller_buttons.h  laser_controller_comms.h  laser_controller_config.h  laser_controller_deployment.h  laser_controller_faults.h  laser_controller_logger.h  laser_controller_pinmap.h  laser_controller_rgb_led.h  laser_controller_safety.h  laser_controller_service.h  laser_controller_signature.h  laser_controller_state.h  laser_controller_types.h  laser_controller_usb_debug_mock.h  laser_controller_wireless.h
components/laser_controller/src/: laser_controller_app.c  laser_controller_bench.c  laser_controller_board.c  laser_controller_buttons.c  laser_controller_comms.c  laser_controller_config.c  laser_controller_deployment.c  laser_controller_faults.c  laser_controller_logger.c  laser_controller_rgb_led.c  laser_controller_safety.c  laser_controller_service.c  laser_controller_signature_autogen.c.in  laser_controller_state.c  laser_controller_usb_debug_mock.c  laser_controller_wireless.c
docs/: CLAUDE.md  datasheet-programming-notes.md  deployment-pipeline.md  firmware-architecture.md  firmware-pinmap.md  hardware-recon.md  host-console-architecture.md  protocol-spec.md  validation-plan.md
docs/Schematics/: BMS-Board.NET  MainPCB.NET  ToF-LED-Board.NET  USB_PD-PHY.NET
host-console/: CLAUDE.md  README.md  index.html  package-lock.json  package.json
host-console/dist-portable/: README.md  run-linux.sh  run-macos.command  run-windows.bat
host-console/dist-portable/app/: index.html
host-console/dist-portable/app/assets/: esp32-C5AbkPry.js  esp32c2-C4TaqLDi.js  esp32c3-xeUQZNUJ.js  esp32c5-DZCgv61K.js  (+8 more)
host-console/dist-portable/server/: serve.ps1  serve.py
host-console/scripts/: live_controller_validation.py
host-console/src/: App.tsx  index.css  styles.css  tauri-api.d.ts  types.ts
host-console/src-tauri/: Cargo.toml  tauri.conf.json
host-console/src-tauri/capabilities/: default.json
host-console/src-tauri/src/: backend.rs  firmware.rs  lib.rs  main.rs
host-console/src/components/: BoardBlueprint.tsx  BringupWorkbench.tsx  BusTrafficViewer.tsx  ButtonBoardPanel.tsx  CommandDeck.tsx  ConfirmActionDialog.tsx  ConnectionStatusTag.tsx  ConnectionWorkbench.tsx  ControlWorkbench.tsx  ControllerBusyOverlay.tsx  DeploymentWorkbench.tsx  EventTimeline.tsx  FirmwareLoaderGuide.tsx  FirmwareWorkbench.tsx  GpioWorkbench.tsx  HelpHint.tsx  ImuPostureCard.tsx  InspectorRail.tsx  ModuleReadinessPanel.tsx  OperateConsole.tsx  ProgressMeter.tsx  SafetyMatrix.tsx  StatusRail.tsx  TofCalibrationPanel.tsx  UsbDebugMockPanel.tsx
host-console/src/domain/: mock.ts  model.ts  protocol.ts
host-console/src/hooks/: use-device-session.ts  use-global-hover-help.ts  use-live-snapshot.ts
host-console/src/lib/: bench-model.ts  bringup.ts  controller-protocol.ts  event-decode.ts  firmware-signature.ts  firmware.ts  format.ts  gpio-inspector.ts  gpio-layout.ts  ld-calibration.ts  live-telemetry.ts  mock-transport.ts  presentation.ts  protocol.ts  session-archive.ts  session-autosave.ts  tec-calibration.ts  web-serial-transport.ts  websocket-transport.ts  wireless.ts
host-console/src/platform/: bridge.ts  browserMock.ts  tauriBridge.ts
ios/: .gitignore  README.md  project.yml
ios/BSLProtocol/: Package.swift
ios/BSLRemote/: BSLRemoteApp.swift
ios/BSLRemote/Resources/: Info.plist
ios/BSLRemote/State/: AuthGate.swift  DeviceSession.swift  LaserModeState.swift
ios/BSLRemote/Theme/: AppearanceMode.swift  BSLColors.swift  BSLTheme.swift
ios/BSLRemote/Views/: ConnectView.swift  MainView.swift  UsbMockBanner.swift  WavelengthEditorSheet.swift  WelcomeView.swift
ios/tools/: mock-ws-server.py
main/: CMakeLists.txt  app_main.c
(+57 files in other folders)
